Complete static analysis cleanup and bundle prep